--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,5 @@ fastapi = "^0.128.0"
 uvicorn = {extras = ["standard"], version = "^0.40.0"}
 pydantic = {extras = ["email"], version = "^2.12.5"}
 pydantic-settings = "^2.12.0"
+greenlet = "^3.3.0"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
