--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,4 @@ pydantic = {extras = ["email"], version = "^2.12.5"}
 pydantic-settings = "^2.12.0"
 greenlet = "^3.3.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
+asyncpg = "^0.31.0"
