--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,9 @@ pydantic-settings = "^2.12.0"
 greenlet = "^3.3.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
 asyncpg = "^0.31.0"
+alembic = "^1.18.0"
+
+[dependency-groups]
+dev = [
+    "black (>=25.12.0,<26.0.0)"
+]
