--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,10 @@ __marimo__/
 .streamlit/secrets.toml
 
 desktop.ini
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+*.sqlite-journal
